# voice-command

./: .gitignore  README.md  pyproject.toml  voice_cmd.py
.github/workflows/: ci.yml  release.yml
tests/: benchmark.py  diagnose_pipeline.py
voice_command/: __init__.py  app.py  audio.py  config.py  output.py  text.py  tui.py
